--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,103 @@
 body{
     margin: 0;
+    padding: 0;
     box-sizing: border-box;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 .hidden{
     display: none;
+}
+
+.navbar{
+    position:sticky;
+    z-index: 1;
+    top: 0;
+    width: 100%;
+    height: 50px;
+    background-color: white;
+}
+
+.ul-wrapper{
+    display: flex;
+    align-items: start;
+    justify-content: space-between;
+}
+
+
+/* MOVIES LIST */
+.list{
+    margin: 50px 0;
+    margin-left: 20px;
+    padding: 25px;
+    display: flex;
+    flex-wrap: wrap;
+    row-gap: 30px;
+    column-gap: 30px;
+    text-align: center;
+    width: 800px;
+    background-color: skyblue;
+    border-radius: 20px;
+}
+
+.list__item{
+    border-radius: 10px;
+    width: 200px;
+    padding: 20px;
+    list-style: none;
+    background-color: rgb(82, 131, 196);
+    text-align: center;
+}
+
+.list__img{
+    width: 100%;
+    height: 250px;
+    border-radius: 10px;
+}
+
+.footer{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+
+/* BOOKMARKED LIST */
+.saved{
+    position: sticky;
+    top: 50px;
+    margin: 50px 0;
+    margin-right: 20px;
+    overflow: auto;
+    background-color: skyblue;
+    padding: 25px;
+    width: 380px;
+    height: 100%;
+    border-radius: 20px;
+}
+
+.saved > li{
+    text-decoration: none;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 10px;
+}
+
+.saved > li:last-child{
+    margin-bottom: 0;
+}
+
+.saved > li > button{
+    border: none;
+    background-color: rgba(255, 0, 0, 0.747);
+    padding: 5px 8px;
+    border-radius: 5px;
+}
+
+.placeholder{
+    text-align: center;
+    color: rgba(0, 0, 0, 0.438);
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif    ;
 }
 
 .modal{
@@ -27,48 +120,4 @@ body{
     width: 500px;
     height: 300px;
     background: white;
-}
-
-.ul-wrapper{
-    display: flex;
-}
-
-.list{
-    margin: 50px 0;
-    margin-left: 20px;
-    padding: 0;
-    display: flex;
-    flex-wrap: wrap;
-    row-gap: 30px;
-    column-gap: 30px;
-    text-align: center;
-}
-
-.list__item{
-    border-radius: 10px;
-    width: 200px;
-    padding: 20px;
-    list-style: none;
-    background-color: lightsteelblue;
-    text-align: center;
-}
-
-.list__img{
-    width: 100%;
-    height: 250px;
-    border-radius: 10px;
-}
-
-.card-footer{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.saved > li{
-    width: 230px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 20px;
 }
